syntax = "proto3";

option go_package = ".;pb";

package proto;

service Simple{
  rpc doRequest(SimpleRequest) returns(SimpleResponse){}
}

//请求
message SimpleRequest{
  string reqIdx = 1;
  string reqData = 2;
}

//响应
message SimpleResponse{
  string rspIdx = 1;
  string rspData = 2;
}

